--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,7 @@
     "react-native-permissions": "^3.6.1",
     "tealium-react-adjust": "../remotecommands/tealium-react-adjust/",
     "tealium-react-appsflyer": "../remotecommands/tealium-react-appsflyer/",
-    
+    "tealium-react-braze": "../remotecommands/tealium-react-braze/",
     "tealium-react-firebase": "../remotecommands/tealium-react-firebase/",
     "tealium-react-native": "../npm-package/",
     "tealium-react-native-adobe-visitor": "../modules/adobe-visitor/",
