--- a/modules/crash-reporter/android/build.gradle
+++ b/modules/crash-reporter/android/build.gradle
@@ -36,7 +36,7 @@ buildscript {
   }
 }
 
-version = "1.0.0"
+version = "1.1.0"
 
 android {
   compileSdkVersion safeExtGet('compileSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
@@ -55,13 +55,16 @@ android {
     disable 'GradleCompatible'
   }
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_11
-    targetCompatibility JavaVersion.VERSION_11
-  }
+  def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')[0].toInteger()
+  if(agpVersion < 8) {
+    compileOptions {
+      sourceCompatibility JavaVersion.VERSION_11
+      targetCompatibility JavaVersion.VERSION_11
+    }
 
-  kotlinOptions {
-    jvmTarget = JavaVersion.VERSION_11
+    kotlinOptions {
+      jvmTarget = JavaVersion.VERSION_11
+    }
   }
 }
 
@@ -95,7 +98,7 @@ dependencies {
   implementation project(":tealium-react-native")
 
   // Tealium
-  implementation 'com.tealium:kotlin-core:1.5.3'
+  implementation 'com.tealium:kotlin-core:1.5.5'
   implementation 'com.tealium:kotlin-crash-reporter:1.1.0'
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${project.ext.kotlinVersion}"
