--- a/remotecommands/tealium-react-appsflyer/android/build.gradle
+++ b/remotecommands/tealium-react-appsflyer/android/build.gradle
@@ -54,11 +54,17 @@ android {
     disable "GradleCompatible"
   }
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
-  }
+  def agpVersion = com.android.Version.ANDROID_GRADLE_PLUGIN_VERSION.tokenize('.')[0].toInteger()
+  if(agpVersion < 8) {
+    compileOptions {
+      sourceCompatibility JavaVersion.VERSION_11
+      targetCompatibility JavaVersion.VERSION_11
+    }
 
+    kotlinOptions {
+      jvmTarget = JavaVersion.VERSION_11
+    }
+  }
 }
 
 repositories {
@@ -76,7 +82,7 @@ dependencies {
 
   implementation project(":tealium-react-native")
   implementation 'com.tealium.remotecommands:appsflyer:1.3.0'
-  implementation 'com.tealium:remotecommands:1.0.1'
+  implementation 'com.tealium:remotecommands:1.0.2'
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
