--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cli-platform-android": "^13.6.6",
+    "@react-native-community/cli-platform-ios": "^13.6.6",
     "react": "18.2.0",
     "react-native": "0.71.10",
     "react-native-permissions": "^3.6.1",
@@ -20,6 +22,7 @@
     "tealium-react-native": "../npm-package/",
     "tealium-react-native-adobe-visitor": "../modules/adobe-visitor/",
     "tealium-react-native-crash-reporter": "../modules/crash-reporter/",
+    "tealium-react-native-install-referrer-attribution": "../modules/install-referrer-attribution/",
     "tealium-react-native-location": "../modules/location/"
   },
   "devDependencies": {
