--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -268,4 +268,6 @@ def isNewArchitectureEnabled() {
     return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
 }
 
-apply plugin: 'com.google.gms.google-services'
+// Uncomment in case you need to activate Firebase functionality
+// Don't forget to add 'google-services.json' file into 'app' folder
+//apply plugin: 'com.google.gms.google-services'
