--- a/example/package.json
+++ b/example/package.json
@@ -17,10 +17,10 @@
     "tealium-react-appsflyer": "../remotecommands/tealium-react-appsflyer/",
     "tealium-react-braze": "../remotecommands/tealium-react-braze/",
     "tealium-react-firebase": "../remotecommands/tealium-react-firebase/",
-    "tealium-react-native": "../npm-package/",
+    "tealium-react-native": "../npm-package",
     "tealium-react-native-adobe-visitor": "../modules/adobe-visitor/",
-    "tealium-react-native-crash-reporter": "../modules/crash-reporter/",
     "tealium-react-native-attribution": "../modules/attribution/",
+    "tealium-react-native-crash-reporter": "../modules/crash-reporter/",
     "tealium-react-native-location": "../modules/location/",
     "tealium-react-native-moments-api": "../modules/moments-api/"
   },
