--- a/example/package.json
+++ b/example/package.json
@@ -1,47 +1,51 @@
 {
-  "name": "example",
+  "name": "com.example",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.71.10",
+    "react": "19.0.0",
+    "react-native": "0.78.0",
     "react-native-permissions": "^3.6.1",
-    "tealium-react-adjust": "../remotecommands/tealium-react-adjust/",
-    "tealium-react-appsflyer": "../remotecommands/tealium-react-appsflyer/",
-    "tealium-react-braze": "../remotecommands/tealium-react-braze/",
-    "tealium-react-firebase": "../remotecommands/tealium-react-firebase/",
-    "tealium-react-native": "../npm-package/",
-    "tealium-react-native-adobe-visitor": "../modules/adobe-visitor/",
-    "tealium-react-native-crash-reporter": "../modules/crash-reporter/",
-    "tealium-react-native-attribution": "../modules/attribution/",
-    "tealium-react-native-location": "../modules/location/",
-    "tealium-react-native-moments-api": "../modules/moments-api/"
+    "react-native-svg-transformer": "^1.5.0",
+    "tealium-react-adjust": "../remotecommands/tealium-react-adjust",
+    "tealium-react-appsflyer": "../remotecommands/tealium-react-appsflyer",
+    "tealium-react-braze": "../remotecommands/tealium-react-braze",
+    "tealium-react-firebase": "../remotecommands/tealium-react-firebase",
+    "tealium-react-native": "../npm-package",
+    "tealium-react-native-attribution": "../modules/attribution",
+    "tealium-react-native-crash-reporter": "../modules/crash-reporter",
+    "tealium-react-native-location": "../modules/location",
+    "tealium-react-native-moments-api": "../modules/moments-api"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.14.0",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^3.0.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.78.0",
+    "@react-native/eslint-config": "0.78.0",
+    "@react-native/metro-config": "0.78.0",
+    "@react-native/typescript-config": "0.78.0",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.5",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "19.0.0",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
