--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tealium-react-native",
   "title": "Tealium React Native",
-  "version": "2.5.1",
+  "version": "2.6.0",
   "description": "A native module for using Tealium's Kotlin and Swift libraries.",
   "main": "index.js",
   "types": "*.ts",
@@ -15,8 +15,7 @@
     "index.js",
     "index.d.ts",
     "ios",
-    "tealium-react-native.podspec",
-    "tealium-react-native-swift.podspec"
+    "tealium-react-native.podspec"
   ],
   "repository": {
     "type": "git",
