--- a/modules/crash-reporter/package.json
+++ b/modules/crash-reporter/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tealium-react-native-crash-reporter",
   "title": "Tealium React Native Crash Reporter",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A native module for using Tealium's Crash Reporter Module for Kotlin and Swift libraries.",
   "main": "index.js",
   "types": "*.ts",
@@ -15,7 +15,7 @@
     "index.js",
     "index.d.ts",
     "ios",
-    "tealium-react-native.podspec"
+    "tealium-react-native-crash-reporter.podspec"
   ],
   "repository": {
     "type": "git",
